--- a/main.css
+++ b/main.css
@@ -3,14 +3,25 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: calibri;
+
 }
 
 .container{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .hexColor{
     text-transform: capitalize;
+}
+
+.square{
+    width: 20vw;
+    height: 20vh;
 }
 
 .hex{
